src/objects/BoardBookDocApproval__c.object
<CustomObject>
    <fields>
        <fullName>ApprovedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BoardBookDocApprovals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BoardBookDoc__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>BoardBookDoc</label>
        <referenceTo>BoardBookDoc__c</referenceTo>
        <relationshipLabel>BoardBookDocApprovals</relationshipLabel>
        <relationshipName>BoardBookDocApprovals</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>BoardBookDocApproval</label>
    <nameField>
        <label>BoardBookDocApproval Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BoardBookDocApprovals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>